--- a/styles/style.css
+++ b/styles/style.css
@@ -3,10 +3,30 @@
     font-family: joystix;
     src: url(joystix.otf);
 }
+
 /* Estilo geral: */
+body {
+    font-family: joystix, sans-serif;
+    font-size: 34px;
+    color: #1E1E1E;
+    background: radial-gradient(circle, #355C17 0%, #597F2C 100%);
+}
 
-
-
+h1 {
+    font-size: 88px;
+  }
+  
+  h2 {
+    font-size: 70px;
+  }
+  
+  h3 {
+    font-size: 50px;
+  }
+  
+  p {
+    font-size: 34px;
+  }
 
 /* Estilo home: */
 
