--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,10 @@
 @charset "UTF-8";
 @font-face {
-    font-family: joystix;
-    src: url(joystix.otf);
+  font-family: 'Joystix';
+  src: url('joystix.woff2') format('woff2'),
+       url('joystix.woff') format('woff');
 }
+
 
 /* Estilo geral: */
 body {
