--- a/styles/style.css
+++ b/styles/style.css
@@ -41,41 +41,45 @@ h1 {
 
 
 /* Estilo contato: */
-.pagina-contato .contato-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 2rem;
-  margin: 2rem;
+.pagina-contato {
+  padding: 2rem;
 }
 
-.pagina-contato form {
-  flex: 1 1 45%;
-  max-width: 100%;
+.contato-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+  flex-wrap: wrap;
+}
+
+form {
+  flex: 1;
+  min-width: 300px;
+  max-width: 500px;
   padding: 2rem;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 10px;
 }
 
-.pagina-contato form label {
+label {
   display: block;
   margin-bottom: 1rem;
   color: #1E1E1E;
 }
 
-.pagina-contato form input,
-.pagina-contato form textarea {
-    width: 100%;
-    padding: 1rem;
-    margin-bottom: 2rem;
-    background: rgba(255, 255, 255, 0.9);
-    border: 3px solid #1E1E1E;
-    border-radius: 5px;
-    font-family: 'Joystix', sans-serif;
-    font-size: 24px;
-    color: #1E1E1E;
+input, textarea {
+  width: 100%;
+  padding: 1rem;
+  margin-bottom: 2rem;
+  background: rgba(255, 255, 255, 0.9);
+  border: 3px solid #1E1E1E;
+  border-radius: 5px;
+  font-family: 'Joystix', sans-serif;
+  font-size: 24px;
+  color: #1E1E1E;
 }
 
-.pagina-contato form button {
+button {
   background: #1E1E1E;
   color: #ffffff;
   border: none;
@@ -87,38 +91,35 @@ h1 {
   transition: background-color 0.3s;
 }
 
-.pagina-contato form button:hover {
+button:hover {
   background: #355C17;
 }
 
-.pagina-contato h1 {
-  text-align: left;
-  color: #1E1E1E;
-  margin: 2rem 2rem 0 2rem;
-}
-
-.pagina-contato .integrantes {
-  flex: 1 1 45%;
+.integrantes {
+  flex: 1;
+  min-width: 300px;
+  max-width: 500px;
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.pagina-contato .integrantes li {
+.integrantes li {
   margin-bottom: 2rem;
+  background: rgba(255, 255, 255, 0.1);
+  padding: 1rem;
+  border-radius: 10px;
 }
 
-.pagina-contato .integrantes p {
-  margin: 0.3rem 0;
-  font-size: inherit;
-  font-family: inherit;
-  color: inherit;
+.integrantes li p {
+  margin: 0.5rem 0;
 }
 
-.pagina-contato .integrantes a {
-  color: inherit;
+.integrantes a {
+  color: #1E1E1E;
   text-decoration: underline;
 }
+
 
 
 
