--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,1 +1,13 @@
 @charset "UTF-8";
+
+@media (max-width: 1300px) {
+    nav li {
+      font-size: 1.5rem;
+      text-align: center;
+    }
+  
+    header {
+      height: auto;
+      padding: 20px 20px;
+    }
+  }
