--- a/styles/style.css
+++ b/styles/style.css
@@ -5,8 +5,13 @@
        url('joystix.woff') format('woff');
 }
 
-
 /* Estilo geral: */
+
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 html {
   font-size: 100%;
 }
@@ -63,6 +68,20 @@ h1 {
     font-size: 2.125rem;
   }
 
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+  align-items: flex-start;
+}
+
+footer {
+  height: 120px;
+  text-align: center;
+  line-height: 80px;
+}
+
 /* Estilo home: */
 
 
@@ -79,9 +98,22 @@ h1 {
 
 
 /* Estilo tutorial snake: */
+#section-one-tutorial, #section-two-tutorial {
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  box-sizing: border-box;
+}
 
+#steps {
+  width: 100%;
+  border-collapse: collapse;
+}
 
-
-
+#steps td {
+  font-size: 1.5rem;
+  padding: 30px;
+  box-sizing: border-box;
+}
 
 /* Estilo em breve: */
